--- a/index.ipynb
+++ b/index.ipynb
@@ -45,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "import sqlite3 \n",
+    "conn = sqlite3.connect('planets.db')\n",
+    "c = conn.cursor()"
    ]
   },
   {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,44 +149,30 @@
        "      <td>Jupiter</td>\n",
        "      <td>orange</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Saturn</td>\n",
-       "      <td>hazel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Uranus</td>\n",
-       "      <td>light blue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Neptune</td>\n",
-       "      <td>dark blue</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name       color\n",
-       "0  Mercury        gray\n",
-       "1    Venus      yellow\n",
-       "2    Earth        blue\n",
-       "3     Mars         red\n",
-       "4  Jupiter      orange\n",
-       "5   Saturn       hazel\n",
-       "6   Uranus  light blue\n",
-       "7  Neptune   dark blue"
+       "      name   color\n",
+       "0  Mercury    gray\n",
+       "1    Venus  yellow\n",
+       "2    Earth    blue\n",
+       "3     Mars     red\n",
+       "4  Jupiter  orange"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "import pandas as pd\n",
+    "c.execute(\"\"\"select name, color from planets limit 9 \"\"\" )\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -198,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -279,13 +265,16 @@
        "3   8  Neptune   dark blue            14   17.15      1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "c.execute(\"\"\"select * from planets where mass >1;\"\"\")\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -297,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -358,13 +347,16 @@
        "3     Mars  0.11"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "c.execute(\"\"\"select name, mass from planets where mass <= 1;\"\"\")\n",
+    "df = pd.DataFrame (c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -376,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -437,13 +429,16 @@
        "3  Neptune   dark blue"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "c.execute('''select name, color from planets where num_of_moons > 10;''')\n",
+    "df = pd.DataFrame (c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -455,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -490,15 +485,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Earth</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>4</td>\n",
        "      <td>Mars</td>\n",
        "      <td>red</td>\n",
@@ -511,18 +497,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   id   name color  num_of_moons  mass  rings\n",
-       "0   3  Earth  blue             1  1.00      0\n",
-       "1   4   Mars   red             2  0.11      0"
+       "   id  name color  num_of_moons  mass  rings\n",
+       "0   4  Mars   red             2  0.11      0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "c.execute('''select * from planets where num_of_moons >= 1 and mass < 1;''')\n",
+    "df = pd.DataFrame (c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -534,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -589,13 +577,16 @@
        "2  Neptune   dark blue"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "c.execute('''select name, color from planets where color = \"blue\" or color = \"light blue\" or color = \"dark blue\";''')\n",
+    "df = pd.DataFrame (c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df.head()"
    ]
   },
   {
@@ -629,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
